--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "express": "^4.17.3",
     "minimist": "^1.2.6"
   },
   "scripts": {
@@ -9,7 +10,6 @@
   "description": "[![Open in Visual Studio Code](https://classroom.github.com/assets/open-in-vscode-f059dc9a6f8d3a56e377f745f24479a46679e63a5d9fe6f495e02850cd0d8118.svg)](https://classroom.github.com/online_ide?assignment_repo_id=7391396&assignment_repo_type=AssignmentRepo) # a03 This assignment will help you set up and interact with a database using Express.js and better-sqlite.",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/comp426-2022-spring/a04-madysonb.git"
