--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "better-sqlite3": "^7.5.0",
     "express": "^4.17.3",
-    "minimist": "^1.2.6"
+    "minimist": "^1.2.6",
+    "morgan": "^1.10.0"
   },
   "scripts": {
     "start": "node server.js"
